--- a/inner.html
+++ b/inner.html
@@ -11,23 +11,24 @@
   <!-- Header -->
   <header class="main-header">
     <div class="container">
-      <a href="/index.html">
+      <a class="next-go" href="/index.html">
         <img class="logo" src="img/logo.png" width="153" height="63" alt="Gllacy Shop»">
       </a>
       <nav class="main-navigation">
         <ul class="top-menu">
-          <li><a href="#">Каталог</a>
-            <div class="btn-menu"><a class="btn-menu-decor" href="#">Каталог</a>
-            </div>
-            <ul>
-              <li><a href="#">Новинки</a>
-              </li>
-              <li><a href="/inner.html">Сливочное</a>
-              </li>
-              <li><a href="#">Фруктовый лед</a>
-              </li>
-              <li><a href="#">Мелорин</a>
-              </li>
+          <li class="menu">
+            <a class="activ-submenu" href="#">Каталог</a>
+            <ul class="submenu">
+              <li class="submenu-menu">
+                <a class="activ-sub" href="#">Новинки</a></li>
+              <li class="submenu-menu">
+                <a class="norm-sub" href="/inner.html">Сливочное</a></li>
+              <li class="submenu-menu-hover">
+                <a class="norm-sub-hover" href="/inner.html">Щербеты</a></li>
+              <li class="submenu-menu">
+                <a class="norm-sub" href="#">Фруктовый лед</a></li>
+              <li class="submenu-menu">
+                <a class="norm-sub" href="#">Мелорин</a></li>
             </ul>
           </li>
           <li><a href="#">Доставка и оплата</a>
@@ -41,7 +42,7 @@
           <a class="uzer-decor" href="#"></a>
           <div class="popup search-hover">
             <form class="search-hover-form" action="#" method="post">
-              <input class="search-go" type="text" name="search" placeholder="Что ищем?">
+              <input class="dial search-go" type="text" name="search" placeholder="Что ищем?">
             </form>
           </div>
         </div>
@@ -63,10 +64,11 @@
           </div>
         </div>
         <div class="uzer-list basket-block">
-          <a class="uzer-decor" href="#">Пусто</a>
+          <a class="uzer-decor">Пусто</a>
           <div class="popup basket-hover">
             <div class="good-basket">
-              <img src="img/m-orange.png">
+              <img src="img/icons/close.png" alt="закрыть">
+              <img src="img/content/m-orange.png" alt="закрыть">
               <span class="basket-text">Пломбир с апельсиновым джемом"</span>
               <div class="basket-price">
                 <span class="heft">1,5кг</span>
@@ -75,7 +77,8 @@
               </div>
             </div>
             <div class="good-basket">
-              <img src="img/m-strawberry.png">
+              <img src="img/icons/close.png" alt="закрыть">
+              <img src="img/content/m-strawberry.png" alt="клубничный пломбир">
               <span class="basket-text">Клубничный пломбир с присыпкой из белого шоколада"</span>
               <div class="basket-price">
                 <span class="heft">1,5кг</span>
@@ -84,8 +87,7 @@
               </div>
             </div>
             <span class="basket-result">Итого: 750 руб.</span>
-            <button class="red-btn" type="submit">Оформить заказ
-            </button>
+            <a class="red-btn" href="#">Оформить заказ</a>
           </div>
         </div>
         <p class="uzer-text">С 10 до 20, ежедневно
@@ -106,190 +108,195 @@
       </li>
     </ul>
     <h1 class="content-title">Сливочное мороженое</h1>
-    <div class="container-left">
-      <form action="#" method="post">
-        <div class="filter">
-          <div class="sorting">
-            <p class="form-title">Сортировка:</p>
-            <input type="text" name="search" value="" placeholder="по популярности">
-            <span class="select"><img src="img/hit.jpg" width="7" height="5" alt=""></span>
-            <div class="price">
-              <!--Этот фильтр, с ценой, я незнаю как сделать -->
-              <p>Цена: 100 руб. – 500 руб.</p>
+    <div class="container-common">
+      <div class="container-left">
+        <form action="#" method="post">
+          <div class="filter">
+            <div class="sorting">
+              <div class="form-title">Сортировка:</div>
+              <input class="dial sort" type="text" name="sort" value="" placeholder="по популярности">
+              <span class="select"><img src="img/icons/select.png" width="7" height="5" alt=""></span>
+              <div class="price">
+                <!--Этот фильтр, с ценой, я незнаю как сделать -->
+                <div>Цена: 100 руб. – 500 руб.</div>
+              </div>
+            </div>
+            <div class="fat">
+              <span>Жирность:</span>
+              <ul class="fat-list">
+                <li class="fat-point">
+                  <input class="fat-sort" id="cfirst" type="radio" name="point">
+                  <label for="cfirst">
+                    <span>0%</span>
+                  </label>
+                </li>
+                <li class="fat-point">
+                  <input class="fat-sort" id="csecond" type="radio" checked name="point">
+                  <label for="csecond">
+                    <span>до 10%</span>
+                  </label>
+                </li>
+                <li class="fat-point">
+                  <input class="fat-sort" id="cthird" type="radio" name="point">
+                  <label for="cthird">
+                    <span>до 30%</span>
+                  </label>
+                </li>
+                <li class="fat-point">
+                  <input class="fat-sort" id="cfour" type="radio" name="point">
+                  <label for="cfour">
+                    <span>выше 30%</span>
+                  </label>
+                </li>
+              </ul>
+            </div>
+            <div class="filler">
+              <span>Наполнители:</span>
+              <ul class="filler-list">
+                <li class="filler-rez">
+                  <input class="filler-sort" id="rfirst" type="checkbox" checked name="rez">
+                  <label for="rfirst">
+                    <span>шоколадные</span>
+                  </label>
+                </li>
+                <li class="filler-rez">
+                  <input class="filler-sort" id="rsecond" type="checkbox" checked name="rez">
+                  <label for="rsecond">
+                    <span>сахарные присыпки</span>
+                  </label>
+                </li>
+                <li class="filler-rez">
+                  <input class="filler-sort" id="rthird" type="checkbox" name="rez">
+                  <label for="rthird">
+                    <span>фрукты</span>
+                  </label>
+                </li>
+                <li class="filler-rez">
+                  <input class="filler-sort" id="rfour" type="checkbox" name="rez">
+                  <label for="rfour">
+                    <span>сиропы</span>
+                  </label>
+                </li>
+                <li class="filler-rez">
+                  <input class="filler-sort" id="rfive" type="checkbox" name="rez">
+                  <label for="rfive">
+                    <span>джемы</span>
+                  </label>
+                </li>
+              </ul>
+            </div>
+            <div class="go-filter">
+              <input type="submit" value="Применить">
             </div>
           </div>
-          <div class="fat">
-            <span>Жирность:</span>
-            <ul class="view fat-list">
-              <li>
-                <input id="cfirst" type="radio" name="unit">
-                <label for="cfirst">
-                  <span>0%</span>
-                </label>
-              </li>
-              <li>
-                <input id="csecond" type="radio" checked name="box">
-                <label for="csecond">
-                  <span>до 10%</span>
-                </label>
-              </li>
-              <li>
-                <input id="cthird" type="radio" name="block">
-                <label for="cthird">
-                  <span>до 30%</span>
-                </label>
-              </li>
-              <li>
-                <input id="cfour" type="radio" name="point">
-                <label for="cfour">
-                  <span>выше 30%</span>
-                </label>
-              </li>
-            </ul>
-          </div>
-          <div class="filler">
-            <span>Наполнители:</span>
-            <ul class="view filler-list">
-              <li>
-                <input id="rfirst" type="checkbox" checked name="adaptive">
-                <label for="rfirst">
-                  <span>шоколадные</span>
-                </label>
-              </li>
-              <li>
-                <input id="rsecond" type="checkbox" checked name="fix">
-                <label for="rsecond">
-                  <span>сахарные присыпки</span>
-                </label>
-              </li>
-              <li>
-                <input id="rthird" type="checkbox" name="news">
-                <label for="rthird">
-                  <span>фрукты</span>
-                </label>
-              </li>
-              <li>
-                <input id="rfour" type="checkbox" name="gallery">
-                <label for="rfour">
-                  <span>сиропы</span>
-                </label>
-              </li>
-              <li>
-                <input id="rfive" type="checkbox" name="rez">
-                <label for="rfive">
-                  <span>джемы</span>
-                </label>
-              </li>
-            </ul>
-          </div>
-          <div class="go-filter">
-            <input type="submit" value="Применить">
+        </form>
+      </div>
+      <div class="container-center">
+        <div class="goods">
+          <div class="good good-box">
+            <div class="good-main"><img src="img/content/orange-cream.png" alt="сливочное"></div>
+            <div class="price">
+              <span class="good-price">310</span>
+              <span class="good-rub">&#8381;</span>
+              <span class="good-kg">/кг</span>
+            </div>
+            <a href="#" class="good-property">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
           </div>
         </div>
-      </form>
-    </div>
-    <div class="container-center">
-      <div class="goods">
         <div class="good good-box">
-          <div class="good-main"><img src="img/orange-cream.png"></div>
+          <div class="good-main"><img src="img/content/strawberry-cream.png" alt="клубничное"></div>
           <div class="price">
-            <span class="good-price">310</span>
-            <span class="good-rub">руб</span>
+            <span class="good-price">380</span>
+            <span class="good-rub">&#8381;</span>
             <span class="good-kg">/кг</span>
           </div>
-          <a href="#" class="good-property">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+          <a href="#" class="good-property">Сливочно-клубничное с присыпкой из белого шоколада</a>
         </div>
-      </div>
-      <div class="good good-box">
-        <div class="good-main"><img src="img/strawberry-cream.png"></div>
-        <div class="price">
-          <span class="good-price">380</span>
-          <span class="good-rub">руб</span>
+        <div class="good good-box">
+          <div class="good-main"><img src="img/content/coffee-cream.png" alt="кофейное"></div>
+          <div class="price">
+            <span class="good-price">355</span>
+            <span class="good-rub">&#8381;</span>
+            <span class="good-kg">/кг</span>
+          </div>
+          <a href="#" class="good-property">Сливочно-кофейное с кусочками шоколада</a>
+        </div>
+        <div class="good good-box">
+          <div class="good-main"><img src="img/content/creamy-cream.png" alt="крем-брюле"></div>
+          <span class="good-price">415</span>
+          <span class="good-rub">&#8381;</span>
           <span class="good-kg">/кг</span>
+          <a href="#" class="good-property">Сливочное крем-брюле с карамельной подливкой</a>
         </div>
-        <a href="#" class="good-property">Сливочно-клубничное с присыпкой из белого шоколада</a>
-      </div>
-      <div class="good good-box">
-        <div class="good-main"><img src="img/coffee-cream.png"></div>
-        <div class="price">
-          <span class="good-price">355</span>
-          <span class="good-rub">руб</span>
-          <span class="good-kg">/кг</span>
+        <div class="good good-box">
+          <div class="good-main"><img src="img/content/cowberry-cream.png" alt="брусничное"></div>
+          <div class="price">
+            <span class="good-price">325</span>
+            <span class="good-rub">&#8381;</span>
+            <span class="good-kg">/кг</span>
+          </div>
+          <a href="#" class="good-property">Сливочное с брусничным джемом</a>
         </div>
-        <a href="#" class="good-property">Сливочно-кофейное с кусочками шоколада</a>
-      </div>
-      <div class="good good-box">
-        <div class="good-main"><img src="img/creamy-cream.png"></div>
-        <span class="good-price">415 руб/кг</span>
-        <a href="#" class="good-property">Сливочное крем-брюле с карамельной подливкой</a>
-      </div>
-      <div class="good good-box">
-        <div class="good-main"><img src="img/cowberry-cream.png"></div>
-        <div class="price">
-          <span class="good-price">325</span>
-          <span class="good-rub">руб</span>
-          <span class="good-kg">/кг</span>
+        <div class="good good-box">
+          <div class="good-main"><img src="img/content/huckleberry-cream.png" alt="черничное"></div>
+          <span class="good-price">410</span>
+          <span class="good-rub">&#8381;/кг</span>
+          <a href="#" class="good-property">Сливочно-черничное с цельными ягодами черники</a>
         </div>
-        <a href="#" class="good-property">Сливочное с брусничным джемом</a>
-      </div>
-      <div class="good good-box">
-        <div class="good-main"><img src="img/huckleberry-cream.png"></div>
-        <span class="good-price">410 руб/кг</span>
-        <a href="#" class="good-property">Сливочно-черничное с цельными ягодами черники</a>
-      </div>
-      <div class="good good-box">
-        <div class="good-main"><img src="img/lemon-cream.png"></div>
-        <div class="price">
-          <span class="good-price">375</span>
-          <span class="good-rub">руб</span>
-          <span class="good-kg">/кг</span>
+        <div class="good good-box">
+          <div class="good-main"><img src="img/content/lemon-cream.png" alt="лимонное"></div>
+          <div class="price">
+            <span class="good-price">375</span>
+            <span class="good-rub">&#8381;</span>
+            <span class="good-kg">/кг</span>
+          </div>
+          <a href="#" class="good-property">Сливочно-лимонное с карамельной присыпкой</a>
         </div>
-        <a href="#" class="good-property">Сливочно-лимонное с карамельной присыпкой</a>
-      </div>
-      <div class="good good-box">
-        <div class="good-main"><img src="img/chip-cream.png"></div>
-        <div class="price">
-          <span class="good-price">320</span>
-          <span class="good-rub">руб</span>
-          <span class="good-kg">/кг</span>
+        <div class="good good-box">
+          <div class="good-main"><img src="img/content/chip-cream.png" alt="карамельное"></div>
+          <div class="price">
+            <span class="good-price">320</span>
+            <span class="good-rub">&#8381;</span>
+            <span class="good-kg">/кг</span>
+          </div>
+          <a href="#" class="good-property">Сливочное с шоколадной стружкой</a>
         </div>
-        <a href="#" class="good-property">Сливочное с шоколадной стружкой</a>
-      </div>
-      <div class="good good-box">
-        <div class="good-main"><img src="img/vanilla-cream.png"></div>
-        <div class="price">
-          <span class="good-price">440</span>
-          <span class="good-rub">руб</span>
-          <span class="good-kg">/кг</span>
+        <div class="good good-box">
+          <div class="good-main"><img src="img/content/vanilla-cream.png" alt="ванильное"></div>
+          <div class="price">
+            <span class="good-price">440</span>
+            <span class="good-rub">&#8381;</span>
+            <span class="good-kg">/кг</span>
+          </div>
+          <a href="#" class="good-property">Сливочно-ванильное с кусочками шоколада</a>
         </div>
-        <a href="#" class="good-property">Сливочно-ванильное с кусочками шоколада</a>
-      </div>
-      <div class="good good-box">
-        <div class="good-main"><img src="img/menthol-cream.png"></div>
-        <div class="price">
-          <span class="good-price">435</span>
-          <span class="good-rub">руб</span>
-          <span class="good-kg">/кг</span>
+        <div class="good good-box">
+          <div class="good-main"><img src="img/content/menthol-cream.png" alt="ментол"></div>
+          <div class="price">
+            <span class="good-price">435</span>
+            <span class="good-rub">&#8381;</span>
+            <span class="good-kg">/кг</span>
+          </div>
+          <a href="#" class="good-property">Сливочноe с ментоловым сиропом</a>
         </div>
-        <a href="#" class="good-property">Сливочноe с ментоловым сиропом</a>
-      </div>
-      <div class="good good-box">
-        <div class="good-main"><img src="img/chocolate-cream.png"></div>
-        <div class="price">
-          <span class="good-price">355</span>
-          <span class="good-rub">руб</span>
-          <span class="good-kg">/кг</span>
+        <div class="good good-box">
+          <div class="good-main"><img src="img/content/chocolate-cream.png" alt="шоколадное"></div>
+          <div class="price">
+            <span class="good-price">355</span>
+            <span class="good-rub">&#8381;</span>
+            <span class="good-kg">/кг</span>
+          </div>
+          <a href="#" class="good-property">Сливочное с кусочками черного шоколада</a>
         </div>
-        <a href="#" class="good-property">Сливочное с кусочками черного шоколада</a>
-      </div>
-      <div class="good good-box">
-        <div class="good-main"><img src="img/mint-cream.png"></div>
-        <div class="price">
-          <span class="good-price">420</span>
-          <span class="good-rub">руб</span>
-          <span class="good-kg">/кг</span>
+        <div class="good good-box">
+          <div class="good-main"><img src="img/content/mint-cream.png" alt="мятное"></div>
+          <div class="price">
+            <span class="good-price">420</span>
+            <span class="good-rub">&#8381;</span>
+            <span class="good-kg">/кг</span>
+          </div>
+          <a href="#" class="good-property">Сливочное с мятным сиропом</a>
         </div>
-        <a href="#" class="good-property">Сливочное с мятным сиропом</a>
       </div>
     </div>
     <div class="paginator">
@@ -321,8 +328,8 @@
         </ul>
       </section>
       <section class="footer-copyright">
-        <p>Разработано:</p>
-        <a class="btn" href="https://htmlacademy.ru">Сделано в <span class="copyright-under">HTML Academy</span> © 2016</a>
+        <img src="img/logo-html.png" alt="HTML Academy">
+        <a class="btn" href="https://htmlacademy.ru" target="_blank">Сделано в <span class="copyright-under">HTML Academy</span> © 2016</a>
       </section>
     </div>
   </footer>
