--- a/index.html
+++ b/index.html
@@ -11,24 +11,29 @@
   <!-- Header -->
   <header class="main-header">
     <div class="container">
-      <a class="next-go" href="/index.html">
+      <div class="next-go">index.html
         <img class="logo" src="img/logo.png" width="153" height="63" alt="Gllacy Shop»">
-      </a>
+      </div>
       <nav class="main-navigation">
         <ul class="top-menu">
           <li class="menu">
-            <a class="activ-submenu" href="#">Каталог</a>
+            <a class="submenu-menu" href="#">Каталог</a>
             <ul class="submenu">
+              <li class="submenu-menu sub-line">
+                <a class="sub" href="#">Новинки</a>
+              </li>
               <li class="submenu-menu">
-                <a class="activ-sub" href="#">Новинки</a></li>
+                <a class="sub" href="/inner.html">Сливочное</a>
+              </li>
               <li class="submenu-menu">
-                <a class="norm-sub" href="/inner.html">Сливочное</a></li>
-              <li class="submenu-menu-hover">
-                <a class="norm-sub-hover" href="/inner.html">Щербеты</a></li>
+                <a class="sub" href="/inner.html">Щербеты</a>
+              </li>
               <li class="submenu-menu">
-                <a class="norm-sub" href="#">Фруктовый лед</a></li>
+                <a class="sub" href="#">Фруктовый лед</a>
+              </li>
               <li class="submenu-menu">
-                <a class="norm-sub" href="#">Мелорин</a></li>
+                <a class="sub" href="#">Мелорин</a>
+              </li>
             </ul>
           </li>
           <li><a href="#">Доставка и оплата</a>
@@ -52,13 +57,12 @@
             <form class="uzer-hover" action="#" method="post">
               <input class="uzer-go" type="email" name="mail" placeholder="Электронная почта">
               <input class="uzer-go" type="password" name="pass" placeholder="Пароль">
-              <button class="red-btn" type="submit">Войти
-              </button>
+              <button class="red-btn" type="submit">Войти</button>
               <div class="user-help">
-                <p class="help">
+                <div class="help">
                   <a class="forgot" href="#">Забыли пароль?</a>
                   <a class="new-log" href="#">Новая регистрация</a>
-                </p>
+                </div>
               </div>
             </form>
           </div>
@@ -67,7 +71,7 @@
           <a class="uzer-decor">Пусто</a>
           <div class="popup basket-hover">
             <div class="good-basket">
-              <img src="img/icons/close.png" alt="закрыть">
+              <a class="close" href="#"></a>
               <img src="img/content/m-orange.png" alt="апельсиновое">
               <span class="basket-text">Пломбир с апельсиновым джемом"</span>
               <div class="basket-price">
@@ -77,7 +81,7 @@
               </div>
             </div>
             <div class="good-basket">
-              <img src="img/icons/close.png" alt="закрыть">
+              <a class="close" href="#"></a>
               <img src="img/content/m-strawberry.png" alt="клубничный пломбир">
               <span class="basket-text">Клубничный пломбир с присыпкой из белого шоколада"</span>
               <div class="basket-price">
@@ -90,15 +94,13 @@
             <a class="red-btn" href="#">Оформить заказ</a>
           </div>
         </div>
-        <p class="uzer-text">С 10 до 20, ежедневно
-          <span class="phone"> 8 812 450-25-25
-          </span>
-        </p>
+        <div class="uzer-text">С 10 до 20, ежедневно
+          <span class="phone"> 8 812 450-25-25</span>
+        </div>
       </div>
     </div>
   </header>
-  <!-- Main -->
-  <main>
+  <div class="center-main">
     <div class="slide">
       <div class="slide-next slide-1">
         <div class="container">
@@ -140,100 +142,102 @@
         </div>
       </div>
     </div>
-    <div class="promo">
-      <div class="promo promo-left">
-        <div class="center-promo">
-          <div class="promo-title">Малинка даром!
+  </div>
+  <!-- Main -->
+  <main class="container">
+    <div class="center-main">
+      <div class="promo">
+        <div class="promo promo-left">
+          <div class="center-promo">
+            <div class="promo-title">Малинка даром!</div>
+            <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+            <a href="#" class="red-btn">Хочу варенье!</a>
           </div>
-          <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-          <a href="#" class="red-btn">Хочу варенье!</a>
         </div>
-      </div>
-      <div class="promo promo-right">
-        <div class="center-promo">
-          <div class="promo-title">Шоколадки даром!
-          </div>
-          <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-          <a href="#" class="red-btn">Хочу шоколадки!</a>
-        </div>
-      </div>
-    </div>
-    <div class="goods">
-      <div class="good good-box">
-        <div class="good-main"><img src="img/content/orange-cream.png" alt="сливочное">
-        </div>
-        <div class="price">
-          <span class="good-price">310</span>
-          <span class="good-rub">&#8381;</span>
-          <span class="good-kg">/кг</span>
-        </div>
-        <a href="#" class="good-property">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-        <a class="red-btn" href="#">Быстрый просмотр</a>
-      </div>
-      <div class="good good-box">
-        <div class="good-main"><img src="img/content/coffee-cream.png" alt="сливочно-кофейное">
-        </div>
-        <div class="price">
-          <span class="good-price">380</span>
-          <span class="good-rub">&#8381;</span>
-          <span class="good-kg">/кг</span>
-        </div>
-        <a href="#" class="good-property">Сливочно-кофейное с кусочками шоколада</a>
-        <a class="red-btn" href="#">Быстрый просмотр</a>
-      </div>
-      <div class="good good-box">
-        <div class="good-main"><img src="img/content/strawberry-cream.png" alt="сливочно-клубничное">
-        </div>
-        <div class="price">
-          <span class="good-price">335</span>
-          <span class="good-rub">&#8381;</span>
-          <span class="good-kg">/кг</span>
-        </div>
-        <a href="#" class="good-property">Сливочно-клубничное с присыпкой из белого шоколада</a>
-        <a class="red-btn" href="#">Быстрый просмотр</a>
-      </div>
-      <div class="good good-box">
-        <div class="good-main"><img src="img/content/creamy-cream.png" alt="с карамелью">
-        </div>
-        <div class="price">
-          <span class="good-price">415</span>
-          <span class="good-rub">&#8381;</span>
-          <span class="good-kg">/кг</span>
-        </div>
-        <a href="#" class="good-property">Сливочно-клубничное с карамельной подливкой</a>
-        <a class="red-btn" href="#">Быстрый просмотр</a>
-      </div>
-    </div>
-    <div class="shop-info">
-      <div class="info-block">
-        <h2 class="shop-title">Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h2>
-        <div class="block-list">
-          <div class="block-left">
-            <p class="shop-text cream-icon">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
-            <p class="shop-text leaf-icon">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья..</p>
-          </div>
-          <div class="block-right">
-            <p class="shop-text cow-icon">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-            <p class="shop-text thermometer-icon">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, которая не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
+        <div class="promo promo-right">
+          <div class="center-promo">
+            <div class="promo-title">Шоколадки даром!</div>
+            <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+            <a href="#" class="red-btn">Хочу шоколадки!</a>
           </div>
         </div>
       </div>
-    </div>
-    <div class="new-mail">
-      <div class="new-block">
-        <div class="shop-info">
-          <img src="img/content/berry.png" alt="сервировка">
+      <div class="goods">
+        <div class="good good-box">
+          <div class="good-main"><img src="img/content/orange-cream.png" alt="сливочное">
+          </div>
+          <div class="price">
+            <span class="good-price">310</span>
+            <span class="good-rub">&#8381;</span>
+            <span class="good-kg">/кг</span>
+          </div>
+          <a href="#" class="good-property">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+          <a class="red-btn" href="#">Быстрый просмотр</a>
         </div>
-        <div class="new-title">Новое в нашем блоге
+        <div class="good good-box">
+          <div class="good-main"><img src="img/content/coffee-cream.png" alt="сливочно-кофейное">
+          </div>
+          <div class="price">
+            <span class="good-price">380</span>
+            <span class="good-rub">&#8381;</span>
+            <span class="good-kg">/кг</span>
+          </div>
+          <a href="#" class="good-property">Сливочно-кофейное с кусочками шоколада</a>
+          <a class="red-btn" href="#">Быстрый просмотр</a>
         </div>
-        <a href="#" class="new-go">10 способов сервировки фруктовых щербетов к столу</a>
+        <div class="good good-box">
+          <div class="good-main"><img src="img/content/strawberry-cream.png" alt="сливочно-клубничное">
+          </div>
+          <div class="price">
+            <span class="good-price">335</span>
+            <span class="good-rub">&#8381;</span>
+            <span class="good-kg">/кг</span>
+          </div>
+          <a href="#" class="good-property">Сливочно-клубничное с присыпкой из белого шоколада</a>
+          <a class="red-btn" href="#">Быстрый просмотр</a>
+        </div>
+        <div class="good good-box">
+          <div class="good-main"><img src="img/content/creamy-cream.png" alt="с карамелью">
+          </div>
+          <div class="price">
+            <span class="good-price">415</span>
+            <span class="good-rub">&#8381;</span>
+            <span class="good-kg">/кг</span>
+          </div>
+          <a href="#" class="good-property">Сливочно-клубничное с карамельной подливкой</a>
+          <a class="red-btn" href="#">Быстрый просмотр</a>
+        </div>
       </div>
-      <div class="mail-block">
-        <p class="mail-text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</p>
-        <form class="new-form" action="#" method="post">
-          <input class="uzer-go" type="email" name="email" placeholder="Электронная почта">
-          <button class="red-btn" type="submit">Отправить</button>
-        </form>
+      <div class="shop-info">
+        <div class="info-block">
+          <h2 class="shop-title">Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h2>
+          <div class="block-list">
+            <div class="block-left">
+              <p class="shop-text cream-icon">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+              <p class="shop-text leaf-icon">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья..</p>
+            </div>
+            <div class="block-right">
+              <p class="shop-text cow-icon">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+              <p class="shop-text thermometer-icon">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, которая не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="new-mail">
+        <div class="new-block">
+          <div class="shop-info">
+            <img src="img/content/berry.png" alt="сервировка">
+          </div>
+          <div class="new-title">Новое в нашем блоге</div>
+          <a href="#" class="new-go">10 способов сервировки фруктовых щербетов к столу</a>
+        </div>
+        <div class="mail-block">
+          <p class="mail-text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</p>
+          <form class="new-form" action="#" method="post">
+            <input class="uzer-go" type="email" name="email" placeholder="Электронная почта">
+            <button class="red-btn" type="submit">Отправить</button>
+          </form>
+        </div>
       </div>
     </div>
     <div class="map">
@@ -248,7 +252,7 @@
             </span>(с 10 до 20 ежедневно)
           </p>
         </div>
-        <a href="#">Форма обратной связи</a>
+        <a class="red-btn" href="#">Форма обратной связи</a>
       </div>
     </div>
   </main>
@@ -279,23 +283,21 @@
   </footer>
   <div class="connection-box">
     <div class="popup connection-block">
-      <div class="connection-title">Мы обязательно вам ответим
-      </div>
+      <div class="connection-title">Мы обязательно вам ответим</div>
       <form class="connection" action="#" method="post">
-        <input class="dial name-connection name-hover name-entry" type="text" name="forename" placeholder="Как вас зовут">
         <label class="connection-entry">
-          Как вас зовут
+          <input class="uzer-go forename-go" type="text" name="forename" placeholder="Как вас зовут">
+          <span class="connect-next">Как вас зовут</span>
         </label>
-        <input class="connection-email mail-hover mail-entry" type="email" name="mail" placeholder="Ваша почта для ответа">
         <label class="connection-entry">
-          Ваша почта
+          <input class="uzer-go mail-entry" type="email" name="mail" placeholder="Ваша почта для ответа">
+          <span class="connect-next">Ваша почта</span>
         </label>
-        <input class="dial connection-text text-hover text-entry" type="text" value="textarea" name="message" placeholder="Напишите что-нибудь...">
-        <label class="connection-message">
+        <label class="connection-entry">
+          <textarea class="uzer-go connection-text">Напишите что-нибудь...</textarea>
           Напишите что-нибудь...
         </label>
-        <button class="red-btn" type="submit">Отправить
-        </button>
+        <button class="red-btn" type="submit">Отправить</button>
       </form>
     </div>
   </div>
