--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Header -->
   <header class="main-header">
     <div class="container">
-      <div class="next-go">index.html
+      <div class="next-go">
         <img class="logo" src="img/logo.png" width="153" height="63" alt="Gllacy Shop»">
       </div>
       <nav class="main-navigation">
@@ -284,6 +284,7 @@
   <div class="connection-box">
     <div class="popup connection-block">
       <div class="connection-title">Мы обязательно вам ответим</div>
+      <a class="close-popup" href="#"></a>
       <form class="connection" action="#" method="post">
         <label class="connection-entry">
           <input class="uzer-go forename-go" type="text" name="forename" placeholder="Как вас зовут">
@@ -294,8 +295,8 @@
           <span class="connect-next">Ваша почта</span>
         </label>
         <label class="connection-entry">
-          <textarea class="uzer-go connection-text">Напишите что-нибудь...</textarea>
-          Напишите что-нибудь...
+          <textarea class="uzer-go connection-text" placeholder="Напишите что-нибудь..."></textarea>
+          <span class="connect-next">Напишите что-нибудь...</span>
         </label>
         <button class="red-btn" type="submit">Отправить</button>
       </form>
