--- a/inner.html
+++ b/inner.html
@@ -72,6 +72,7 @@
           <div class="popup basket-hover">
             <div class="good-basket">
               <a class="close" href="#"></a>
+              <img src="img/content/m-orange.png" alt="апельсиновое">
               <span class="basket-text">Пломбир с апельсиновым джемом"</span>
               <div class="basket-price">
                 <span class="heft">1,5кг</span>
@@ -113,11 +114,11 @@
           <div class="filter">
             <div class="sorting">
               <div class="form-title">Сортировка:
-                <ul class="submenu submenu-close">
-                  <li class="submenu-menu">сначала недорогие</li>
-                  <li class="submenu-menu">сначала дорогие</li>
-                  <li class="submenu-menu">по жирности</li>
-                </ul>
+                <select class="select filter-select">
+                  <option>сначала недорогие</option>
+                  <option>сначала дорогие</option>
+                  <option>по жирности</option>
+                </select>
               </div>
               <input class="dial sort" type="text" name="sort" value="" placeholder="по популярности">
               <span class="sort-go"><img src="img/icons/select.png" width="7" height="5" alt=""></span>
