Изменения 2 за 4 февраля

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
           <span class="connect-next">Ваша почта</span>
         </label>
         <label class="connection-entry">
-          <textarea class="uzer-go connection-text" placeholder="Напишите что-нибудь..."></textarea>
+          <textarea class="uzer-go connection-text" name="message" placeholder="Напишите что-нибудь..."></textarea>
           <span class="connect-next">Напишите что-нибудь...</span>
         </label>
         <button class="red-btn" type="submit">Отправить</button>
