--- a/inner.html
+++ b/inner.html
@@ -113,19 +113,16 @@
         <form action="#" method="post">
           <div class="filter">
             <div class="sorting">
-              <div class="form-title">Сортировка:
-                <select class="select filter-select">
-                  <option>сначала недорогие</option>
-                  <option>сначала дорогие</option>
-                  <option>по жирности</option>
-                </select>
-              </div>
-              <input class="dial sort" type="text" name="sort" value="" placeholder="по популярности">
-              <span class="sort-go"><img src="img/icons/select.png" width="7" height="5" alt=""></span>
-              <div class="price">
-                <!--Этот фильтр, с ценой, я незнаю как сделать -->
-                <div>Цена: 100 руб. – 500 руб.</div>
-              </div>
+              <div class="form-title">Сортировка:</div>
+              <select class="select filter-select">
+                <option>сначала недорогие</option>
+                <option>сначала дорогие</option>
+                <option>по жирности</option>
+              </select>
+            </div>
+            <div class="price-filter">
+              <div class="form-title">Цена: 100 руб. - 500 руб.</div>
+              <div class="price"></div>
             </div>
             <div class="fat">
               <div class="form-title">Жирность:</div>
