--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="main-body">
   <!-- Header -->
   <header class="main-header">
-    <div class="container">
+    <div class="container clearfix">
       <div class="next-go">
         <img class="logo" src="img/logo.png" width="153" height="63" alt="Gllacy Shop»">
       </div>
@@ -146,7 +146,7 @@
   <!-- Main -->
   <main class="container">
     <div class="center-main">
-      <div class="promo">
+      <div class="promo clearfix">
         <div class="promo promo-left">
           <div class="center-promo">
             <div class="promo-title">Малинка даром!</div>
@@ -162,7 +162,7 @@
           </div>
         </div>
       </div>
-      <div class="goods">
+      <div class="goods clearfix">
         <div class="good good-box">
           <div class="good-main"><img src="img/content/orange-cream.png" alt="сливочное">
           </div>
@@ -209,7 +209,7 @@
         </div>
       </div>
       <div class="shop-info">
-        <div class="info-block">
+        <div class="info-block clearfix">
           <h2 class="shop-title">Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h2>
           <div class="block-list">
             <div class="block-left">
@@ -223,7 +223,7 @@
           </div>
         </div>
       </div>
-      <div class="new-mail">
+      <div class="new-mail clearfix">
         <div class="new-block">
           <div class="shop-info">
             <img src="img/content/berry.png" alt="сервировка">
@@ -258,7 +258,7 @@
   </main>
   <!-- Footer -->
   <footer class="main-footer">
-    <div class="container">
+    <div class="container clearfix">
       <section class="footer-social">
         <a class="social-btn social-btn-tv" href="#">Твитер</a>
         <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
@@ -281,7 +281,7 @@
       </section>
     </div>
   </footer>
-  <div class="connection-box">
+  <div class="connection-box clearfix">
     <div class="popup connection-block">
       <div class="connection-title">Мы обязательно вам ответим</div>
       <a class="close-popup" href="#"></a>
