--- a/inner.html
+++ b/inner.html
@@ -10,7 +10,7 @@
 <body class="inner-body">
   <!-- Header -->
   <header class="main-header">
-    <div class="container">
+    <div class="container clearfix">
       <a class="next-go" href="/index.html">
         <img class="logo" src="img/logo.png" width="153" height="63" alt="Gllacy Shop»">
       </a>
@@ -101,7 +101,7 @@
     </div>
   </header>
   <!-- main -->
-  <main class="container">
+  <main class="container clearfix">
     <ul class="breadcrumbs">
       <li><a href="#">Главная</a></li>
       <li><a href="#">Каталог</a></li>
@@ -111,7 +111,7 @@
     <div class="container-common">
       <div class="container-left">
         <form action="#" method="post">
-          <div class="filter">
+          <div class="filter clearfix">
             <div class="sorting">
               <div class="form-title">Сортировка:</div>
               <select class="select filter-select">
@@ -197,7 +197,7 @@
       <div class="container-center">
         <div class="goods">
           <div class="good good-box">
-            <div class="good-main"><img src="img/content/orange-cream.png" alt="сливочное"></div>
+            <div class="good-main"><img src="img/content/orange-cream.png" width="267" height="267" alt="сливочное"></div>
             <div class="price">
               <span class="good-price">310</span>
               <span class="good-rub">&#8381;</span>
@@ -207,7 +207,7 @@
           </div>
         </div>
         <div class="good good-box">
-          <div class="good-main"><img src="img/content/strawberry-cream.png" alt="клубничное"></div>
+          <div class="good-main"><img src="img/content/strawberry-cream.png" width="267" height="267" alt="клубничное"></div>
           <div class="price">
             <span class="good-price">380</span>
             <span class="good-rub">&#8381;</span>
@@ -216,7 +216,7 @@
           <a href="#" class="good-property">Сливочно-клубничное с присыпкой из белого шоколада</a>
         </div>
         <div class="good good-box">
-          <div class="good-main"><img src="img/content/coffee-cream.png" alt="кофейное"></div>
+          <div class="good-main"><img src="img/content/coffee-cream.png" width="267" height="267" alt="кофейное"></div>
           <div class="price">
             <span class="good-price">355</span>
             <span class="good-rub">&#8381;</span>
@@ -225,14 +225,14 @@
           <a href="#" class="good-property">Сливочно-кофейное с кусочками шоколада</a>
         </div>
         <div class="good good-box">
-          <div class="good-main"><img src="img/content/creamy-cream.png" alt="крем-брюле"></div>
+          <div class="good-main"><img src="img/content/creamy-cream.png" width="267" height="267" alt="крем-брюле"></div>
           <span class="good-price">415</span>
           <span class="good-rub">&#8381;</span>
           <span class="good-kg">/кг</span>
           <a href="#" class="good-property">Сливочное крем-брюле с карамельной подливкой</a>
         </div>
         <div class="good good-box">
-          <div class="good-main"><img src="img/content/cowberry-cream.png" alt="брусничное"></div>
+          <div class="good-main"><img src="img/content/cowberry-cream.png" width="267" height="267" alt="брусничное"></div>
           <div class="price">
             <span class="good-price">325</span>
             <span class="good-rub">&#8381;</span>
@@ -241,13 +241,13 @@
           <a href="#" class="good-property">Сливочное с брусничным джемом</a>
         </div>
         <div class="good good-box">
-          <div class="good-main"><img src="img/content/huckleberry-cream.png" alt="черничное"></div>
+          <div class="good-main"><img src="img/content/huckleberry-cream.png" width="267" height="267" alt="черничное"></div>
           <span class="good-price">410</span>
           <span class="good-rub">&#8381;/кг</span>
           <a href="#" class="good-property">Сливочно-черничное с цельными ягодами черники</a>
         </div>
         <div class="good good-box">
-          <div class="good-main"><img src="img/content/lemon-cream.png" alt="лимонное"></div>
+          <div class="good-main"><img src="img/content/lemon-cream.png" width="267" height="267" alt="лимонное"></div>
           <div class="price">
             <span class="good-price">375</span>
             <span class="good-rub">&#8381;</span>
@@ -256,7 +256,7 @@
           <a href="#" class="good-property">Сливочно-лимонное с карамельной присыпкой</a>
         </div>
         <div class="good good-box">
-          <div class="good-main"><img src="img/content/chip-cream.png" alt="карамельное"></div>
+          <div class="good-main"><img src="img/content/chip-cream.png" width="267" height="267" alt="карамельное"></div>
           <div class="price">
             <span class="good-price">320</span>
             <span class="good-rub">&#8381;</span>
@@ -265,7 +265,7 @@
           <a href="#" class="good-property">Сливочное с шоколадной стружкой</a>
         </div>
         <div class="good good-box">
-          <div class="good-main"><img src="img/content/vanilla-cream.png" alt="ванильное"></div>
+          <div class="good-main"><img src="img/content/vanilla-cream.png" width="267" height="267" alt="ванильное"></div>
           <div class="price">
             <span class="good-price">440</span>
             <span class="good-rub">&#8381;</span>
@@ -274,7 +274,7 @@
           <a href="#" class="good-property">Сливочно-ванильное с кусочками шоколада</a>
         </div>
         <div class="good good-box">
-          <div class="good-main"><img src="img/content/menthol-cream.png" alt="ментол"></div>
+          <div class="good-main"><img src="img/content/menthol-cream.png" width="267" height="267" alt="ментол"></div>
           <div class="price">
             <span class="good-price">435</span>
             <span class="good-rub">&#8381;</span>
@@ -313,7 +313,7 @@
   </main>
   <!-- Footer -->
   <footer class="main-footer">
-    <div class="container">
+    <div class="container clearfix">
       <section class="footer-social">
         <a class="social-btn social-btn-tv" href="#">Твитер</a>
         <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
